// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionnaireAdminResults /> renders correctly all type of questions 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-content mt-25"
  >
    <div
      key="0"
    >
      <PrivateBox
        divClassName=""
        message="admin.fields.question.private"
        show={false}
      >
        <ForwardRef
          className="mr-40"
          justifyContent="space-between"
        >
          <p>
            <b>
              1
              . 
              question type select
            </b>
            <br />
            <span
              className="excerpt"
            >
              <FormattedMessage
                id="global.counters.contributors"
                values={
                  Object {
                    "num": 7,
                  }
                }
              />
               
              /
               
              <FormattedMessage
                id="count-answers"
                values={
                  Object {
                    "num": 14,
                  }
                }
              />
              <br />
            </span>
          </p>
          <Relay(QuestionnaireAdminResultsExportMenu)
            chartsRef={Array []}
            logoUrl="/logo"
            questionnaire={
              Object {
                " $fragmentRefs": null,
                " $refType": null,
                "questions": Array [
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "MultipleChoiceQuestion",
                    "allResponses": Object {
                      "totalCount": 14,
                    },
                    "id": "1",
                    "participants": Object {
                      "totalCount": 7,
                    },
                    "private": false,
                    "required": false,
                    "title": "question type select",
                    "type": "select",
                  },
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "MultipleChoiceQuestion",
                    "allResponses": Object {
                      "totalCount": 98,
                    },
                    "id": "2",
                    "participants": Object {
                      "totalCount": 98,
                    },
                    "private": false,
                    "required": true,
                    "title": "question type radio",
                    "type": "radio",
                  },
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "MultipleChoiceQuestion",
                    "allResponses": Object {
                      "totalCount": 48,
                    },
                    "id": "3",
                    "participants": Object {
                      "totalCount": 45,
                    },
                    "private": false,
                    "required": false,
                    "title": "question type checkbox",
                    "type": "checkbox",
                  },
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "SectionQuestion",
                    "allResponses": Object {
                      "totalCount": 4,
                    },
                    "id": "4",
                    "participants": Object {
                      "totalCount": 2,
                    },
                    "private": false,
                    "required": false,
                    "title": "section",
                    "type": "section",
                  },
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "MultipleChoiceQuestion",
                    "allResponses": Object {
                      "totalCount": 43,
                    },
                    "id": "5",
                    "participants": Object {
                      "totalCount": 43,
                    },
                    "private": false,
                    "required": false,
                    "title": "question type button",
                    "type": "button",
                  },
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "MultipleChoiceQuestion",
                    "allResponses": Object {
                      "totalCount": 0,
                    },
                    "id": "6",
                    "participants": Object {
                      "totalCount": 38,
                    },
                    "private": false,
                    "required": false,
                    "title": "question type ranking",
                    "type": "ranking",
                  },
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "SimpleQuestion",
                    "allResponses": Object {
                      "totalCount": 4,
                    },
                    "id": "7",
                    "participants": Object {
                      "totalCount": 4,
                    },
                    "private": false,
                    "required": false,
                    "title": "question type text",
                    "type": "text",
                  },
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "SimpleQuestion",
                    "allResponses": Object {
                      "totalCount": 89,
                    },
                    "id": "8",
                    "participants": Object {
                      "totalCount": 89,
                    },
                    "private": false,
                    "required": false,
                    "title": "question type number",
                    "type": "number",
                  },
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "MediaQuestion",
                    "allResponses": Object {
                      "totalCount": 9,
                    },
                    "id": "9",
                    "participants": Object {
                      "totalCount": 9,
                    },
                    "private": false,
                    "required": false,
                    "title": "question type number",
                    "type": "medias",
                  },
                ],
              }
            }
          />
        </ForwardRef>
        <Relay(injectIntl(QuestionnaireAdminResultsPieChart))
          backgroundColor="#897897"
          innerRef={[Function]}
          multipleChoiceQuestion={
            Object {
              " $fragmentRefs": null,
              "__typename": "MultipleChoiceQuestion",
              "allResponses": Object {
                "totalCount": 14,
              },
              "id": "1",
              "participants": Object {
                "totalCount": 7,
              },
              "private": false,
              "required": false,
              "title": "question type select",
              "type": "select",
            }
          }
        />
      </PrivateBox>
    </div>
    <div
      key="1"
    >
      <PrivateBox
        divClassName=""
        message="admin.fields.question.private"
        show={false}
      >
        <ForwardRef
          className="mr-40"
          justifyContent="space-between"
        >
          <p>
            <b>
              2
              . 
              question type radio
            </b>
            <br />
            <span
              className="excerpt"
            >
              <FormattedMessage
                id="global.counters.contributors"
                values={
                  Object {
                    "num": 98,
                  }
                }
              />
               
              /
               
              <FormattedMessage
                id="count-answers"
                values={
                  Object {
                    "num": 98,
                  }
                }
              />
              <br />
              <b>
                <FormattedMessage
                  id="mandatory-question"
                  values={Object {}}
                />
              </b>
            </span>
          </p>
        </ForwardRef>
        <Relay(injectIntl(QuestionnaireAdminResultsPieChart))
          backgroundColor="#897897"
          innerRef={[Function]}
          multipleChoiceQuestion={
            Object {
              " $fragmentRefs": null,
              "__typename": "MultipleChoiceQuestion",
              "allResponses": Object {
                "totalCount": 98,
              },
              "id": "2",
              "participants": Object {
                "totalCount": 98,
              },
              "private": false,
              "required": true,
              "title": "question type radio",
              "type": "radio",
            }
          }
        />
      </PrivateBox>
    </div>
    <div
      key="2"
    >
      <PrivateBox
        divClassName=""
        message="admin.fields.question.private"
        show={false}
      >
        <ForwardRef
          className="mr-40"
          justifyContent="space-between"
        >
          <p>
            <b>
              3
              . 
              question type checkbox
            </b>
            <br />
            <span
              className="excerpt"
            >
              <FormattedMessage
                id="global.counters.contributors"
                values={
                  Object {
                    "num": 45,
                  }
                }
              />
               
              /
               
              <FormattedMessage
                id="count-answers"
                values={
                  Object {
                    "num": 48,
                  }
                }
              />
              <br />
            </span>
          </p>
        </ForwardRef>
        <Relay(injectIntl(QuestionnaireAdminResultsBarChart))
          backgroundColor="#897897"
          innerRef={[Function]}
          multipleChoiceQuestion={
            Object {
              " $fragmentRefs": null,
              "__typename": "MultipleChoiceQuestion",
              "allResponses": Object {
                "totalCount": 48,
              },
              "id": "3",
              "participants": Object {
                "totalCount": 45,
              },
              "private": false,
              "required": false,
              "title": "question type checkbox",
              "type": "checkbox",
            }
          }
        />
      </PrivateBox>
    </div>
    <div
      key="3"
    >
      <PrivateBox
        divClassName=""
        message="admin.fields.question.private"
        show={false}
      >
        <ForwardRef
          className="mr-40"
          justifyContent="space-between"
        >
          <p>
            <b>
              4
              . 
              question type button
            </b>
            <br />
            <span
              className="excerpt"
            >
              <FormattedMessage
                id="global.counters.contributors"
                values={
                  Object {
                    "num": 43,
                  }
                }
              />
               
              /
               
              <FormattedMessage
                id="count-answers"
                values={
                  Object {
                    "num": 43,
                  }
                }
              />
              <br />
            </span>
          </p>
        </ForwardRef>
        <Relay(injectIntl(QuestionnaireAdminResultsPieChart))
          backgroundColor="#897897"
          innerRef={[Function]}
          multipleChoiceQuestion={
            Object {
              " $fragmentRefs": null,
              "__typename": "MultipleChoiceQuestion",
              "allResponses": Object {
                "totalCount": 43,
              },
              "id": "5",
              "participants": Object {
                "totalCount": 43,
              },
              "private": false,
              "required": false,
              "title": "question type button",
              "type": "button",
            }
          }
        />
      </PrivateBox>
    </div>
    <div
      key="4"
    >
      <PrivateBox
        divClassName=""
        message="admin.fields.question.private"
        show={false}
      >
        <ForwardRef
          className="mr-40"
          justifyContent="space-between"
        >
          <p>
            <b>
              5
              . 
              question type ranking
            </b>
            <br />
            <span
              className="excerpt"
            >
              <FormattedMessage
                id="global.counters.contributors"
                values={
                  Object {
                    "num": 38,
                  }
                }
              />
              <br />
            </span>
          </p>
        </ForwardRef>
        <Relay(Component)
          multipleChoiceQuestion={
            Object {
              " $fragmentRefs": null,
              "__typename": "MultipleChoiceQuestion",
              "allResponses": Object {
                "totalCount": 0,
              },
              "id": "6",
              "participants": Object {
                "totalCount": 38,
              },
              "private": false,
              "required": false,
              "title": "question type ranking",
              "type": "ranking",
            }
          }
        />
      </PrivateBox>
    </div>
    <div
      key="5"
    >
      <PrivateBox
        divClassName=""
        message="admin.fields.question.private"
        show={false}
      >
        <ForwardRef
          className="mr-40"
          justifyContent="space-between"
        >
          <p>
            <b>
              6
              . 
              question type text
            </b>
            <br />
            <span
              className="excerpt"
            >
              <FormattedMessage
                id="global.counters.contributors"
                values={
                  Object {
                    "num": 4,
                  }
                }
              />
               
              /
               
              <FormattedMessage
                id="count-answers"
                values={
                  Object {
                    "num": 4,
                  }
                }
              />
              <br />
            </span>
          </p>
        </ForwardRef>
        <Relay(Component)
          simpleQuestion={
            Object {
              " $fragmentRefs": null,
              "__typename": "SimpleQuestion",
              "allResponses": Object {
                "totalCount": 4,
              },
              "id": "7",
              "participants": Object {
                "totalCount": 4,
              },
              "private": false,
              "required": false,
              "title": "question type text",
              "type": "text",
            }
          }
        />
      </PrivateBox>
    </div>
    <div
      key="6"
    >
      <PrivateBox
        divClassName=""
        message="admin.fields.question.private"
        show={false}
      >
        <ForwardRef
          className="mr-40"
          justifyContent="space-between"
        >
          <p>
            <b>
              7
              . 
              question type number
            </b>
            <br />
            <span
              className="excerpt"
            >
              <FormattedMessage
                id="global.counters.contributors"
                values={
                  Object {
                    "num": 89,
                  }
                }
              />
               
              /
               
              <FormattedMessage
                id="count-answers"
                values={
                  Object {
                    "num": 89,
                  }
                }
              />
              <br />
            </span>
          </p>
        </ForwardRef>
        <Relay(Component)
          simpleQuestion={
            Object {
              " $fragmentRefs": null,
              "__typename": "SimpleQuestion",
              "allResponses": Object {
                "totalCount": 89,
              },
              "id": "8",
              "participants": Object {
                "totalCount": 89,
              },
              "private": false,
              "required": false,
              "title": "question type number",
              "type": "number",
            }
          }
        />
      </PrivateBox>
    </div>
    <div
      key="7"
    >
      <PrivateBox
        divClassName=""
        message="admin.fields.question.private"
        show={false}
      >
        <ForwardRef
          className="mr-40"
          justifyContent="space-between"
        >
          <p>
            <b>
              8
              . 
              question type number
            </b>
            <br />
            <span
              className="excerpt"
            >
              <FormattedMessage
                id="global.counters.contributors"
                values={
                  Object {
                    "num": 9,
                  }
                }
              />
               
              /
               
              <FormattedMessage
                id="count-answers"
                values={
                  Object {
                    "num": 9,
                  }
                }
              />
              <br />
            </span>
          </p>
        </ForwardRef>
        <Relay(QuestionnaireAdminResultsMedia)
          mediaQuestion={
            Object {
              " $fragmentRefs": null,
              "__typename": "MediaQuestion",
              "allResponses": Object {
                "totalCount": 9,
              },
              "id": "9",
              "participants": Object {
                "totalCount": 9,
              },
              "private": false,
              "required": false,
              "title": "question type number",
              "type": "medias",
            }
          }
        />
      </PrivateBox>
    </div>
  </div>
</div>
`;

exports[`<QuestionnaireAdminResults /> renders correctly with private question & without participants 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-content mt-25"
  >
    <div
      key="0"
    >
      <PrivateBox
        divClassName=""
        message="admin.fields.question.private"
        show={true}
      >
        <ForwardRef
          className="mr-40"
          justifyContent="space-between"
        >
          <p>
            <b>
              1
              . 
              question type select
            </b>
            <br />
            <span
              className="excerpt"
            >
              <FormattedMessage
                id="no-answer"
                values={Object {}}
              />
              <br />
            </span>
          </p>
          <Relay(QuestionnaireAdminResultsExportMenu)
            chartsRef={Array []}
            logoUrl="/logo"
            questionnaire={
              Object {
                " $fragmentRefs": null,
                " $refType": null,
                "questions": Array [
                  Object {
                    " $fragmentRefs": null,
                    "__typename": "MultipleChoiceQuestion",
                    "allResponses": Object {
                      "totalCount": 0,
                    },
                    "id": "1",
                    "participants": Object {
                      "totalCount": 0,
                    },
                    "private": true,
                    "required": false,
                    "title": "question type select",
                    "type": "select",
                  },
                ],
              }
            }
          />
        </ForwardRef>
      </PrivateBox>
    </div>
  </div>
</div>
`;

exports[`<QuestionnaireAdminResults /> renders correctly without questions 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-content mt-25"
  >
    <div>
      <FormattedMessage
        id="no-question"
        values={Object {}}
      />
    </div>
  </div>
</div>
`;
